<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" 
              android:orientation="horizontal" 
              android:id="@+id/subNaviBar" 
              android:layout_width="fill_parent" 
              android:layout_height="46.0dip" 
              android:layout_alignParentBottom="true"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:id="@+id/controller_lock" 
                 android:contentDescription="@string/btn_lock"
                 android:background="@drawable/playback_item_back_translucent" 
                 android:longClickable="true" 
                 android:layout_width="0.0dip" 
                 android:layout_height="fill_parent" 
                 android:layout_weight="1.0" 
                 android:src="@drawable/lock" />
    <ImageButton android:id="@+id/controller_prev" 
                 android:contentDescription="@string/btn_prev"
                 android:background="@drawable/playback_item_back_translucent" 
                 android:layout_width="0.0dip" 
                 android:layout_height="fill_parent" 
                 android:src="@drawable/prev" 
                 android:layout_weight="1.0" />
    <ZoomButton android:id="@+id/controller_backward" 
                 android:contentDescription="@string/btn_backward" 
                 android:background="@drawable/playback_item_back_translucent" 
                 android:layout_width="0.0dip" 
                 android:layout_height="fill_parent" 
                 android:src="@drawable/backward" 
                 android:scaleType="center" 
                 android:layout_weight="1.0" 
                 android:hapticFeedbackEnabled="false" />
    <ImageButton android:id="@+id/controller_playpause"  
                 android:contentDescription="@string/btn_pause"
                 android:background="@drawable/playback_item_back_translucent" 
                 android:longClickable="true" 
                 android:layout_width="0.0dip" 
                 android:layout_height="fill_parent" 
                 android:src="@drawable/play_pause" 
                 android:layout_weight="1.0" />
    <ZoomButton android:id="@+id/controller_forward"  
                 android:contentDescription="@string/btn_forward"
                 android:background="@drawable/playback_item_back_translucent" 
                 android:layout_width="0.0dip" 
                 android:layout_height="fill_parent" 
                 android:src="@drawable/forward" 
                 android:scaleType="center" 
                 android:layout_weight="1.0" 
                 android:hapticFeedbackEnabled="false" />
    <ImageButton android:id="@+id/controller_next"  
                 android:contentDescription="@string/btn_next"
                 android:background="@drawable/playback_item_back_translucent" 
                 android:longClickable="true" 
                 android:layout_width="0.0dip" 
                 android:layout_height="fill_parent" 
                 android:src="@drawable/next" 
                 android:layout_weight="1.0" />
    <ImageButton android:id="@+id/controller_stop"  
                 android:contentDescription="@string/btn_quit"
                 android:background="@drawable/playback_item_back_translucent" 
                 android:longClickable="true" 
                 android:layout_width="0.0dip" 
                 android:layout_height="fill_parent" 
                 android:src="@drawable/stop" 
                 android:layout_weight="1.0" />
</LinearLayout>
